# pi_n_xsec

./: README.md  pyproject.toml
MAID/: phi_dep_eval_MAID.ipynb  pi_n_xsec_net_MAID.py
basic/: phi_dep_eval.ipynb  pi_n_xsec_net.py
basic/lightning_logs/version_0/: metrics.csv
basic/lightning_logs/version_0/checkpoints/: epoch=77-step=21060.ckpt
basic/lightning_logs/version_1/: metrics.csv
basic/lightning_logs/version_1/checkpoints/: epoch=50-step=13770.ckpt
replicas/: pi_n_xsec_net_replicas.py  replicas_eval.ipynb
