[project]
name = "pi-n-xsec"
version = "0.1.0"
description = ""
authors = [
    {name = "golda.av15@physics.msu.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
numpy = ">=2.3.3"
pandas = ">=2.3.3"
torch = ">=2.0.0"
lightning = ">=2.0.0"
torchmetrics = ">=1.8.0"
scikit-learn = ">=1.8.0"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.0"
matplotlib = ">=3.8"
black = ">=24.0"
ruff = ">=0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
